--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CleanShop - Produtos de Limpeza Premium</title>
-    <meta name="description" content="E-commerce de produtos de limpeza com qualidade premium, entrega rápida e os melhores preços do mercado." />
-    <meta name="author" content="CleanShop" />
+    <title>Click&Brilhe - Produtos de Beleza Premium</title>
+    <meta name="description" content="E-commerce de produtos de beleza com qualidade premium, entrega rápida e os melhores preços do mercado." />
+    <meta name="author" content="Click&Brilhe" />
 
-    <meta property="og:title" content="CleanShop - Produtos de Limpeza Premium" />
-    <meta property="og:description" content="E-commerce de produtos de limpeza com qualidade premium, entrega rápida e os melhores preços do mercado." />
+    <meta property="og:title" content="Click&Brilhe - Produtos de Beleza Premium" />
+    <meta property="og:description" content="E-commerce de produtos de beleza com qualidade premium, entrega rápida e os melhores preços do mercado." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
